<resources>
    <string name="app_name">Date4Me</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="desc">Date4Me Logo</string>
    <string name="signin">Sign In</string>
    <string name="not_member">Not A Member yet ?</string>
    <string name="signup">Sign Up Now!</string>
    <string name="welcome">WELCOME</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="religion">Religion</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="full_name">Enter Full Name</string>
    <string name="create_account">Create Account</string>
    <string name="register_below">Register Below</string>
    <string name="your_full_name">Full Name: </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="about_you">About You</string>
    <string name="occupaion">Occupation</string>
    <string name="enter">Enter</string>
    <string name="about_yourself">About Yourself</string>
    <string name="members">Members</string>
    <string name="favorites">Favorites</string>
    <string name="registration_wrong_input">Check the email adress and make sure password is atleast 8 characters</string>
    <string name = "registration_failed">Failed to create new account. please try again</string>
    <string name = "signin_failed_msg">User Authentication Failed</string>
    <string name="signout">Sign Out</string>
    <string name="my_profile">My Profile</string>
    <string name="profile_saved_successfully">Profile was updated successfully</string>
    <string name="failed_updating_profile">Failed to save changes to your profile</string>
    <string name= "failed_loading_profile">Failed to load your profile</string>
    <string name="profile_not_exists">You have not created a profile yet Please do so</string>
    <string-array name="religion_list">
        <item>None</item>
        <item>Christian</item>
        <item>Jewish</item>
        <item>Muslim</item>
        <item>Hindu</item>
    </string-array>
    <string-array name="states">
        <item>AL</item>
        <item>AR</item>
        <item>AZ</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>
    <string-array name="action_bar_list">
        <item>Sign Out</item>
    </string-array>


    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="profile">User Profile</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="age">Age: </string>
    <string name="location">Location:</string>
    <string name="from">From: </string>
    <string name="card_occupation">Occupation:</string>
    <string name="view_more">VIEW MORE</string>
    <string name="text">MESSAGE</string>
    <string name="select_photo">select photo</string>
    <string name="update_profile">update profile</string>
    <string name="enter_message">Enter Message</string>
    <string name="number_of_favorites">Number of Favorites :</string>
    <string name="registration_authentication_failed">Authentication failed.</string>
</resources>
